--- a/module/zcommon/Makefile.in
+++ b/module/zcommon/Makefile.in
@@ -5,10 +5,10 @@ DISTFILES += zfs_prop.c zpool_prop.c zprop_common.c
 MODULE := zcommon
 
 EXTRA_CFLAGS  = @KERNELCPPFLAGS@
-EXTRA_CFLAGS += -I@MODDIR@/zcommon/include
-EXTRA_CFLAGS += -I@MODDIR@/spl/include
 EXTRA_CFLAGS += -I@MODDIR@/avl/include
 EXTRA_CFLAGS += -I@MODDIR@/nvpair/include
+EXTRA_CFLAGS += -I@MODDIR@/zcommon/include
+EXTRA_CFLAGS += -I@MODDIR@/zfs/include
 
 obj-m := ${MODULE}.o
 
