--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -79,7 +79,7 @@ ${MODULE}-objs += zfs_fuid.o
 # ${MODULE}-objs += zfs_rlock.o
 # ${MODULE}-objs += zfs_vfsops.o
 # ${MODULE}-objs += zfs_vnops.o
-${MODULE}-objs += zfs_znode.o
+# ${MODULE}-objs += zfs_znode.o
 ${MODULE}-objs += zil.o
 ${MODULE}-objs += zio.o
 ${MODULE}-objs += zio_checksum.o
