--- a/cmd/ztest/Makefile.am
+++ b/cmd/ztest/Makefile.am
@@ -10,7 +10,8 @@ DEFAULT_INCLUDES += \
 	-I${top_srcdir}/module/zfs/include \
 	-I${top_srcdir}/module/zcommon/include \
 	-I${top_srcdir}/module/nvpair/include \
-	-I${top_srcdir}/module/avl/include
+	-I${top_srcdir}/module/avl/include \
+	-I${top_srcdir}/module/unicode/include
 
 sbin_PROGRAMS = ztest
 
@@ -21,6 +22,7 @@ ztest_LDADD = \
 	$(top_builddir)/lib/libspl/libspl.la \
 	$(top_builddir)/lib/libavl/libavl.la \
 	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libunicode/libunicode.la \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
