--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,4 +1,4 @@
-subdir-m = avl nvpair zcommon zfs
+subdir-m = avl nvpair unicode zcommon zfs
 
 # Make the exported SPL symbols available to these modules.
 # Unfortunately there is not a cleaner way to do this, modpost
