--- a/module/zcommon/Makefile.in
+++ b/module/zcommon/Makefile.in
@@ -7,6 +7,7 @@ MODULE := zcommon
 EXTRA_CFLAGS  = @KERNELCPPFLAGS@
 EXTRA_CFLAGS += -I@MODDIR@/avl/include
 EXTRA_CFLAGS += -I@MODDIR@/nvpair/include
+EXTRA_CFLAGS += -I@MODDIR@/unicode/include
 EXTRA_CFLAGS += -I@MODDIR@/zcommon/include
 EXTRA_CFLAGS += -I@MODDIR@/zfs/include
 
