--- a/cmd/zfs/Makefile.in
+++ b/cmd/zfs/Makefile.in
@@ -63,6 +63,7 @@ zfs_OBJECTS = $(am_zfs_OBJECTS)
 zfs_DEPENDENCIES = $(top_builddir)/lib/libspl/libspl.la \
 	$(top_builddir)/lib/libavl/libavl.la \
 	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libunicode/libunicode.la \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
@@ -216,7 +217,8 @@ DEFAULT_INCLUDES = -I${top_srcdir} -I${top_srcdir}/lib/libspl/include \
 	-I${top_srcdir}/lib/libnvpair/include \
 	-I${top_srcdir}/module/zcommon/include \
 	-I${top_srcdir}/module/nvpair/include \
-	-I${top_srcdir}/module/avl/include
+	-I${top_srcdir}/module/avl/include \
+	-I${top_srcdir}/module/unicode/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
@@ -241,6 +243,7 @@ zfs_LDADD = \
 	$(top_builddir)/lib/libspl/libspl.la \
 	$(top_builddir)/lib/libavl/libavl.la \
 	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libunicode/libunicode.la \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
