--- a/lib/libspl/Makefile.in
+++ b/lib/libspl/Makefile.in
@@ -65,8 +65,8 @@ libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libspl_la_LIBADD =
 am_libspl_la_OBJECTS = getexecname.lo gethrtime.lo getmntany.lo \
-	list.lo mkdirp.lo strlcat.lo strlcpy.lo strnlen.lo \
-	u8_textprep.lo zone.lo atomic.lo
+	list.lo mkdirp.lo strlcat.lo strlcpy.lo strnlen.lo zone.lo \
+	atomic.lo
 libspl_la_OBJECTS = $(am_libspl_la_OBJECTS)
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
@@ -243,7 +243,6 @@ libspl_la_SOURCES = \
 	${top_srcdir}/lib/libspl/strlcat.c \
 	${top_srcdir}/lib/libspl/strlcpy.c \
 	${top_srcdir}/lib/libspl/strnlen.c \
-	${top_srcdir}/lib/libspl/u8_textprep.c \
 	${top_srcdir}/lib/libspl/zone.c \
 	${top_srcdir}/lib/libspl/asm-${target_cpu}/atomic.S \
 	${top_srcdir}/lib/libspl/include/sys/list.h \
@@ -326,7 +325,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/strlcat.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/strlcpy.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/strnlen.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/u8_textprep.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/zone.Plo@am__quote@
 
 .S.o:
@@ -417,13 +415,6 @@ strnlen.lo: ${top_srcdir}/lib/libspl/strnlen.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='${top_srcdir}/lib/libspl/strnlen.c' object='strnlen.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o strnlen.lo `test -f '${top_srcdir}/lib/libspl/strnlen.c' || echo '$(srcdir)/'`${top_srcdir}/lib/libspl/strnlen.c
-
-u8_textprep.lo: ${top_srcdir}/lib/libspl/u8_textprep.c
-@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT u8_textprep.lo -MD -MP -MF "$(DEPDIR)/u8_textprep.Tpo" -c -o u8_textprep.lo `test -f '${top_srcdir}/lib/libspl/u8_textprep.c' || echo '$(srcdir)/'`${top_srcdir}/lib/libspl/u8_textprep.c; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/u8_textprep.Tpo" "$(DEPDIR)/u8_textprep.Plo"; else rm -f "$(DEPDIR)/u8_textprep.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='${top_srcdir}/lib/libspl/u8_textprep.c' object='u8_textprep.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o u8_textprep.lo `test -f '${top_srcdir}/lib/libspl/u8_textprep.c' || echo '$(srcdir)/'`${top_srcdir}/lib/libspl/u8_textprep.c
 
 zone.lo: ${top_srcdir}/lib/libspl/zone.c
 @am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT zone.lo -MD -MP -MF "$(DEPDIR)/zone.Tpo" -c -o zone.lo `test -f '${top_srcdir}/lib/libspl/zone.c' || echo '$(srcdir)/'`${top_srcdir}/lib/libspl/zone.c; \
