Add include paths

--- a/lib/libzfs/Makefile.am
+++ b/lib/libzfs/Makefile.am
@@ -10,7 +10,8 @@ DEFAULT_INCLUDES += \
 	-I${top_srcdir}/module/zfs/include \
         -I${top_srcdir}/module/zcommon/include \
         -I${top_srcdir}/module/nvpair/include \
-        -I${top_srcdir}/module/avl/include
+        -I${top_srcdir}/module/avl/include \
+	-I${top_srcdir}/module/unicode/include
 
 lib_LTLIBRARIES = libzfs.la
 
