Refresh autogen products

--- a/lib/libzfs/Makefile.in
+++ b/lib/libzfs/Makefile.in
@@ -221,7 +221,8 @@ DEFAULT_INCLUDES = -I${top_srcdir} -I${top_srcdir}/lib/libzfs/include \
 	-I${top_srcdir}/module/zfs -I${top_srcdir}/module/zfs/include \
 	-I${top_srcdir}/module/zcommon/include \
 	-I${top_srcdir}/module/nvpair/include \
-	-I${top_srcdir}/module/avl/include
+	-I${top_srcdir}/module/avl/include \
+	-I${top_srcdir}/module/unicode/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
