--- a/lib/libzpool/Makefile.in
+++ b/lib/libzpool/Makefile.in
@@ -231,6 +231,7 @@ DEFAULT_INCLUDES = -I${top_srcdir} \
 	-I${top_srcdir}/module/zcommon/include \
 	-I${top_srcdir}/module/nvpair/include \
 	-I${top_srcdir}/module/avl/include \
+	-I${top_srcdir}/module/unicode/include \
 	-I${top_srcdir}/module/zfs/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
