Move default include paths after custom include paths so local stuff gets picked up first

--- a/module/nvpair/Makefile.in
+++ b/module/nvpair/Makefile.in
@@ -3,8 +3,8 @@ DISTFILES = nvpair.c
 
 MODULE := znvpair
 
-EXTRA_CFLAGS  = @KERNELCPPFLAGS@
-EXTRA_CFLAGS += -I@MODDIR@/nvpair/include
+EXTRA_CFLAGS  = -I@MODDIR@/nvpair/include
+EXTRA_CFLAGS += @KERNELCPPFLAGS@
 
 obj-m := ${MODULE}.o
 
