--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -11,12 +11,12 @@ DISTFILES += zfs_znode.o zil.o zio.o zio_checksum.o zio_compress.o zio_inject.o
 
 MODULE := zpool
 
-EXTRA_CFLAGS  = @KERNELCPPFLAGS@
-EXTRA_CFLAGS += -I@MODDIR@/zfs/include
+EXTRA_CFLAGS  = -I@MODDIR@/zfs/include
 EXTRA_CFLAGS += -I@MODDIR@/zcommon/include
 EXTRA_CFLAGS += -I@MODDIR@/avl/include
 EXTRA_CFLAGS += -I@MODDIR@/nvpair/include
 EXTRA_CFLAGS += -I@MODDIR@/unicode/include
+EXTRA_CFLAGS += @KERNELCPPFLAGS@
 
 obj-m := ${MODULE}.o
 
