--- a/module/avl/Makefile.in
+++ b/module/avl/Makefile.in
@@ -3,8 +3,8 @@ DISTFILES = avl.c
 
 MODULE := zavl
 
-EXTRA_CFLAGS  = @KERNELCPPFLAGS@
-EXTRA_CFLAGS += -I@MODDIR@/avl/include
+EXTRA_CFLAGS  = -I@MODDIR@/avl/include
+EXTRA_CFLAGS += @KERNELCPPFLAGS@
 
 obj-m := ${MODULE}.o
 
