Comment out until ZPL implemented

--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -44,7 +44,7 @@ ${MODULE}-objs += gzip.o
 ${MODULE}-objs += lzjb.o
 ${MODULE}-objs += metaslab.o
 ${MODULE}-objs += refcount.o
-${MODULE}-objs += rrwlock.o
+# ${MODULE}-objs += rrwlock.o
 ${MODULE}-objs += sha256.o
 ${MODULE}-objs += spa.o
 ${MODULE}-objs += spa_boot.o
