Remove zfs_fuid for now from kernel source until needed by ZPL

--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -73,7 +73,7 @@ ${MODULE}-objs += zfs_acl.o
 # ${MODULE}-objs += zfs_ctldir.o
 # ${MODULE}-objs += zfs_dir.o
 ${MODULE}-objs += zfs_fm.o
-${MODULE}-objs += zfs_fuid.o
+# ${MODULE}-objs += zfs_fuid.o
 # ${MODULE}-objs += zfs_ioctl.o
 # ${MODULE}-objs += zfs_log.o
 # ${MODULE}-objs += zfs_replay.o
