Refresh autogen products

--- a/Makefile.in
+++ b/Makefile.in
@@ -55,7 +55,9 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(top_srcdir)/module/zcommon/include/sys/fm/Makefile.in \
 	$(top_srcdir)/module/zcommon/include/sys/fm/fs/Makefile.in \
 	$(top_srcdir)/module/zcommon/include/sys/fs/Makefile.in \
-	$(top_srcdir)/module/zfs/Makefile.in AUTHORS COPYING ChangeLog
+	$(top_srcdir)/module/zfs/Makefile.in \
+	$(top_srcdir)/module/zpios/Makefile.in AUTHORS COPYING \
+	ChangeLog
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/kernel-bio-args.m4 \
 	$(top_srcdir)/config/kernel.m4 \
@@ -81,7 +83,8 @@ CONFIG_CLEAN_FILES = module/Makefile module/avl/Makefile \
 	module/zcommon/include/sys/Makefile \
 	module/zcommon/include/sys/fs/Makefile \
 	module/zcommon/include/sys/fm/Makefile \
-	module/zcommon/include/sys/fm/fs/Makefile module/zfs/Makefile
+	module/zcommon/include/sys/fm/fs/Makefile module/zfs/Makefile \
+	module/zpios/Makefile
 SOURCES =
 DIST_SOURCES =
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
@@ -325,6 +328,8 @@ module/zcommon/include/sys/fm/fs/Makefile: $(top_builddir)/config.status $(top_s
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 module/zfs/Makefile: $(top_builddir)/config.status $(top_srcdir)/module/zfs/Makefile.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
+module/zpios/Makefile: $(top_builddir)/config.status $(top_srcdir)/module/zpios/Makefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -471,7 +476,7 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/config $(distdir)/module $(distdir)/module/avl $(distdir)/module/avl/include $(distdir)/module/avl/include/sys $(distdir)/module/nvpair $(distdir)/module/nvpair/include $(distdir)/module/nvpair/include/sys $(distdir)/module/unicode $(distdir)/module/unicode/include $(distdir)/module/unicode/include/sys $(distdir)/module/zcommon $(distdir)/module/zcommon/include $(distdir)/module/zcommon/include/sys $(distdir)/module/zcommon/include/sys/fm $(distdir)/module/zcommon/include/sys/fm/fs $(distdir)/module/zcommon/include/sys/fs $(distdir)/module/zfs
+	$(mkdir_p) $(distdir)/config $(distdir)/module $(distdir)/module/avl $(distdir)/module/avl/include $(distdir)/module/avl/include/sys $(distdir)/module/nvpair $(distdir)/module/nvpair/include $(distdir)/module/nvpair/include/sys $(distdir)/module/unicode $(distdir)/module/unicode/include $(distdir)/module/unicode/include/sys $(distdir)/module/zcommon $(distdir)/module/zcommon/include $(distdir)/module/zcommon/include/sys $(distdir)/module/zcommon/include/sys/fm $(distdir)/module/zcommon/include/sys/fm/fs $(distdir)/module/zcommon/include/sys/fs $(distdir)/module/zfs $(distdir)/module/zpios
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
