Add missing include paths

--- a/module/zpios/Makefile.in
+++ b/module/zpios/Makefile.in
@@ -3,7 +3,12 @@ DISTFILES = zpios.c
 
 MODULE := zpios
 
-EXTRA_CFLAGS  = -I@MODDIR@/zpios/include
+EXTRA_CFLAGS  = -I@MODDIR@/zfs/include
+EXTRA_CFLAGS += -I@MODDIR@/zcommon/include
+EXTRA_CFLAGS += -I@MODDIR@/avl/include
+EXTRA_CFLAGS += -I@MODDIR@/nvpair/include
+EXTRA_CFLAGS += -I@MODDIR@/unicode/include
+EXTRA_CFLAGS += -I@MODDIR@/zpios/include
 EXTRA_CFLAGS += @KERNELCPPFLAGS@
 
 obj-m := ${MODULE}.o
