Build missing sources

--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -58,6 +58,7 @@ ${MODULE}-objs += uberblock.o
 ${MODULE}-objs += unique.o
 ${MODULE}-objs += vdev.o
 ${MODULE}-objs += vdev_cache.o
+${MODULE}-objs += vdev_disk.o
 ${MODULE}-objs += vdev_file.o
 ${MODULE}-objs += vdev_label.o
 ${MODULE}-objs += vdev_mirror.o
@@ -69,7 +70,7 @@ ${MODULE}-objs += zap.o
 ${MODULE}-objs += zap_leaf.o
 ${MODULE}-objs += zap_micro.o
 ${MODULE}-objs += zfs_acl.o
-# ${MODULE}-objs += zfs_byteswap.o
+${MODULE}-objs += zfs_byteswap.o
 # ${MODULE}-objs += zfs_ctldir.o
 # ${MODULE}-objs += zfs_dir.o
 ${MODULE}-objs += zfs_fm.o
@@ -80,7 +81,7 @@ ${MODULE}-objs += zfs_fm.o
 # ${MODULE}-objs += zfs_rlock.o
 # ${MODULE}-objs += zfs_vfsops.o
 # ${MODULE}-objs += zfs_vnops.o
-# ${MODULE}-objs += zfs_znode.o
+${MODULE}-objs += zfs_znode.o
 ${MODULE}-objs += zil.o
 ${MODULE}-objs += zio.o
 ${MODULE}-objs += zio_checksum.o
