--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -58,7 +58,7 @@ ${MODULE}-objs += uberblock.o
 ${MODULE}-objs += unique.o
 ${MODULE}-objs += vdev.o
 ${MODULE}-objs += vdev_cache.o
-${MODULE}-objs += vdev_disk.o
+# ${MODULE}-objs += vdev_disk.o  Must be updated to be b103 friendly
 ${MODULE}-objs += vdev_file.o
 ${MODULE}-objs += vdev_label.o
 ${MODULE}-objs += vdev_mirror.o
