Add 5 splat tests for list handling

--- a/modules/splat/Makefile.in
+++ b/modules/splat/Makefile.in
@@ -23,6 +23,7 @@ splat-objs += splat-time.o
 splat-objs += splat-vnode.o
 splat-objs += splat-kobj.o
 splat-objs += splat-atomic.o
+splat-objs += splat-list.o
 
 splatmodule := splat.ko
 splatmoduledir := @kmoduledir@/kernel/lib/
