Update helper scripts

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,5 +1,4 @@
-EXTRA_DIST  = update-zfs.sh check.sh
-EXTRA_DIST += load-zfs.sh unload-zfs.sh create-zpool.sh
+EXTRA_DIST  = update-zfs.sh check.sh zfs.sh create-zpool.sh
 
 check:
 	./check.sh
